backend/vulnerability_analysis/testing/oob1/full/klee-out-0/test000050.ptr.err
Error: memory error: out of bound pointer
File: final_tc/oob1_klee.c
Line: 49
assembly.ll line: 8441
State: 86
Stack: 
	#000008441 in update_employee(138868567310336, 1) at final_tc/oob1_klee.c:49
	#100008775 in __klee_posix_wrapped_main() at final_tc/oob1_klee.c:87
	#200006118 in __user_main(1, 139694811643904, 139694811643920) at src/runtime/POSIX/klee_init_env.c:245
	#300000572 in __uClibc_main(139679032672256, 1, 139694811643904, 0, 0, 0, 0) at libc/misc/internals/__uClibc_main.c:401
	#400000737 in main(1, 139694811643904)
Info: 
	address: 138799847833610
	next: object at 138449271128064 of size 4
		MO7577[4] allocated at __klee_posix_wrapped_main():  %1 = alloca i32, align 4
